# lawdigest_codeserver

./: .gitignore  GEMINI.md  README.md  data_operations.py  data_operations_OOP.py  fetch_data.py  pyproject.toml  requirements.txt  requirements_test.txt  stage_data_upload.py
debug/: debug_241213.ipynb  debug_241224.ipynb  debug_250104.ipynb
debug/test_250104/: data_operations.py  result_data_upload.py  stage_data_upload.py
fetch/: fetch_20250118.ipynb  대안데이터수집.ipynb
jobs/: bill_data_upload.py  database_backup.py  hourly_data_update.py  lawmakers_data_upload.py  request_update.py  result_data_upload.py  stage_data_upload.py  timeline_data_upload.py  vote_data_upload.py
scripts/: run_db_backup.sh  run_sequential_updates.sh  run_update_bills.sh  run_update_lawmakers.sh  run_update_results.sh  run_update_timeline.sh  run_update_votes.sh
src/: AISummarizer.py  APISender.py  DataFetcher.py  DataProcessor.py  WorkFlowManager.py  __init__.py  data_operations_OOP.py  notifier.py
src/data_operations/: AISummarizer.py  APISender.py  DataFetcher.py  DataProcessor.py  WorkFlowManager.py  __init__.py
src/etc/: crawling_법령_old.py  crawling_오늘의국회.py  crawling_판례.py  fetch_data.py  fetch_data_generic.py
src/lawdigest_ai/: config.py  embedding_generator.py  qdrant_manager.py
src/lawdigest_dataops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data_fetcher.py
tools/: USAGE.md  collect_alternatives.py  collect_bills.py  collect_lawmakers.py  collect_results.py  collect_timeline.py  collect_votes.py  update_vector_db.py
